[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/p2d_perspective/p2d_inspector_control.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.392157 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.392157 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.392157 )

[node name="Control" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -1124.0
margin_bottom = -604.0
rect_min_size = Vector2( 156, 156 )
custom_constants/separation = 10
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 156.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_styles/normal = SubResource( 1 )
text = "Projection"
align = 1

[node name="gc" type="GridContainer" parent="."]
editor/display_folded = true
margin_top = 24.0
margin_right = 156.0
margin_bottom = 44.0
size_flags_horizontal = 3
columns = 2

[node name="op_mode_label" type="Label" parent="gc"]
margin_top = 3.0
margin_right = 73.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Mode"

[node name="op_mode" type="OptionButton" parent="gc"]
margin_left = 77.0
margin_right = 156.0
margin_bottom = 20.0
size_flags_horizontal = 3
shortcut_in_tooltip = false
text = "boxes"
items = [ "boxes", null, false, 0, null, "clone", null, false, 1, null, "none", null, false, 2, null ]
selected = 0

[node name="boxes_sides_label" type="Label" parent="."]
margin_top = 54.0
margin_right = 156.0
margin_bottom = 68.0
custom_styles/normal = SubResource( 2 )
text = "Draw Sides"
align = 1

[node name="gc2" type="GridContainer" parent="."]
editor/display_folded = true
margin_top = 78.0
margin_right = 156.0
margin_bottom = 130.0
columns = 2

[node name="boxes_side_top" type="CheckBox" parent="gc2"]
margin_right = 76.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Top"

[node name="boxes_side_bottom" type="CheckBox" parent="gc2"]
margin_left = 80.0
margin_right = 156.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Bottom"

[node name="boxes_side_left" type="CheckBox" parent="gc2"]
margin_top = 28.0
margin_right = 76.0
margin_bottom = 52.0
size_flags_horizontal = 3
text = "Left"

[node name="boxes_side_right" type="CheckBox" parent="gc2"]
margin_left = 80.0
margin_top = 28.0
margin_right = 156.0
margin_bottom = 52.0
size_flags_horizontal = 3
text = "Right"

[node name="boxes_sides_label2" type="Label" parent="."]
margin_top = 140.0
margin_right = 156.0
margin_bottom = 154.0
custom_styles/normal = SubResource( 3 )
text = "Additional Sprites"
align = 1

[node name="gc3" type="GridContainer" parent="."]
margin_top = 164.0
margin_right = 156.0
margin_bottom = 208.0
columns = 2

[node name="tex_over_top" type="Label" parent="gc3"]
margin_top = 3.0
margin_right = 76.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Top"

[node name="boxes_texture_top" type="MenuButton" parent="gc3"]
margin_left = 80.0
margin_right = 156.0
margin_bottom = 20.0
size_flags_horizontal = 3
shortcut_in_tooltip = false
text = "[assign]"
flat = false
items = [ "Load", null, 0, false, false, 0, 0, null, "", false, "Clear", null, 0, false, false, 1, 0, null, "", false ]

[node name="tex_over_bottom" type="Label" parent="gc3"]
margin_top = 27.0
margin_right = 76.0
margin_bottom = 41.0
size_flags_horizontal = 3
text = "Bottom"

[node name="boxes_texture_bottom" type="MenuButton" parent="gc3"]
margin_left = 80.0
margin_top = 24.0
margin_right = 156.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "[assign]"
flat = false
items = [ "Load", null, 0, false, false, 0, 0, null, "", false, "Clear", null, 0, false, false, 1, 0, null, "", false ]

[node name="file_diag" type="FileDialog" parent="."]
margin_top = 218.0
margin_right = 640.0
margin_bottom = 698.0
rect_min_size = Vector2( 640, 480 )
size_flags_horizontal = 5
size_flags_vertical = 5
window_title = "Open a File"
resizable = true
mode = 0
